--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,22 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "fr": {
+              "aot": true,
+              "outputPath": "dist/internationalization-fr/",
+              "i18nFile": "src/locale/messages.fr.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "fr",
+              "i18nMissingTranslation": "error"
+            },
+            "de": {
+              "aot": true,
+              "outputPath": "dist/internationalization-de/",
+              "i18nFile": "src/locale/messages.de.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "de",
+              "i18nMissingTranslation": "error"
             }
           }
         },
@@ -66,6 +82,12 @@
           "configurations": {
             "production": {
               "browserTarget": "internationalization:build:production"
+            },
+            "fr": {
+              "browserTarget": "internationalization:build:fr"
+            },
+            "de": {
+              "browserTarget": "internationalization:build:de"
             }
           }
         },
